; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/spl/extr_spl-proc.c_spl_proc_fini.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/spl/extr_spl-proc.c_spl_proc_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"kstat\00", align 1
@proc_spl = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [5 x i8] c"slab\00", align 1
@proc_spl_kmem = common dso_local global i32* null, align 8
@.str.2 = private unnamed_addr constant [5 x i8] c"kmem\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"taskq-all\00", align 1
@.str.4 = private unnamed_addr constant [6 x i8] c"taskq\00", align 1
@.str.5 = private unnamed_addr constant [4 x i8] c"spl\00", align 1
@spl_header = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @spl_proc_fini() #0 {
  %1 = load i32*, i32** @proc_spl, align 8
  %2 = call i32 @remove_proc_entry(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32* %1)
  %3 = load i32*, i32** @proc_spl_kmem, align 8
  %4 = call i32 @remove_proc_entry(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32* %3)
  %5 = load i32*, i32** @proc_spl, align 8
  %6 = call i32 @remove_proc_entry(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i32* %5)
  %7 = load i32*, i32** @proc_spl, align 8
  %8 = call i32 @remove_proc_entry(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i32* %7)
  %9 = load i32*, i32** @proc_spl, align 8
  %10 = call i32 @remove_proc_entry(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0), i32* %9)
  %11 = call i32 @remove_proc_entry(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i64 0, i64 0), i32* null)
  %12 = load i32*, i32** @spl_header, align 8
  %13 = icmp ne i32* %12, null
  %14 = zext i1 %13 to i32
  %15 = call i32 @ASSERT(i32 %14)
  %16 = load i32*, i32** @spl_header, align 8
  %17 = call i32 @unregister_sysctl_table(i32* %16)
  ret void
}

declare dso_local i32 @remove_proc_entry(i8*, i32*) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @unregister_sysctl_table(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
